kubernetes/nodejsKubernetesdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-deployment
  labels:
    app: nodeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
      - name: nodeserver
        image: shreyas2204/my-node-app
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
