kubernetes/nodejsKubernetesservice.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
spec:
  selector:
    app: nodeapp 
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 4000
    nodePort: 32000
  externalIPs: 
    - 10.0.0.100
